# Inventory-management-system

./: CMakeLists.txt  README.md
data/: inventory.db
docs/: architecture.md  database_schema.md  development_log.md
src/: main.cpp
src/database/: Database.cpp  Database.h
src/models/: Product.h  Stock.h  Transaction.h
src/repository/: ProductRepository.cpp  ProductRepository.h  StockRepository.cpp  StockRepository.h  TransactionRepository.cpp  TransactionRepository.h
src/services/: InventoryService.cpp  InventoryService.h  ReportService.cpp  ReportService.h
